replace deprecations